sqlite/conformance/sqlite-sqltests/snapshots/cte_cardinality__small-cte-materialized-big-cte-outer.snap
---
source: cte_cardinality.sqltest
expression: |-
  WITH small AS (
          SELECT id FROM items LIMIT 2
      ),
      big AS (
          SELECT id FROM items LIMIT 100
      )
      SELECT s.id, b.id
      FROM small s
      JOIN big b ON s.id = b.id;
info:
  statement_type: WITH (CTE)
  tables:
  - big
  - items
  - s.id
  - small
  setup_blocks:
  - tables
  database: ':memory:'
---
QUERY PLAN
|--SCAN small AS s
|  `--SCAN items
`--SEARCH b USING INDEX ephemeral_subquery_t4 (id=?)
   `--SCAN items
